--- a/practice_.ipynb
+++ b/practice_.ipynb
@@ -1343,14 +1343,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "Point (1,2)\n",
+      "Point (3,4)\n"
      ]
     }
    ],
@@ -1366,7 +1367,12 @@
     "        print(f\"Point ({self.x},{self.y})\")\n",
     "\n",
     "point = Point(1,2)\n",
-    "print.d\n"
+    "point.draw()\n",
+    "\n",
+    "another = Point(3,4)\n",
+    "another.draw()\n",
+    "\n",
+    "\n"
    ]
   },
   {
