--- a/practice_.ipynb
+++ b/practice_.ipynb
@@ -2337,6 +2337,144 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi I am Nancy and I am 17 years old \n",
+      "Hi I am morris and I am 5 years old \n",
+      "5\n",
+      "17\n",
+      "[1, 2, 3]\n",
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create your own  classes and objects \n",
+    "class Dog(object):\n",
+    "    def __init__(self,name,age): #self represents an instance \n",
+    "        self.name = name \n",
+    "        self.age= age\n",
+    "        self.li=[1,2,3,]\n",
+    "        self.dict={1,2,3,3}\n",
+    "\n",
+    "\n",
+    "    def speak(self):\n",
+    "        print('Hi I am', self.name,'and I am',self.age,'years old ')\n",
+    "    \n",
+    "    def change_age(self, age):\n",
+    "        self.age = age\n",
+    "    def add_weight(self,weight)\n",
+    "        self.weight=weight\n",
+    "    \n",
+    "tim=Dog('morris',16)\n",
+    "fred=Dog('Nancy',17)\n",
+    "tim.change_age(5)\n",
+    "fred.speak()\n",
+    "tim.speak()\n",
+    "\n",
+    "print(tim.age)\n",
+    "print(fred.age)\n",
+    "print(tim.li)\n",
+    "print(tim.dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi I am morris and I am 10 years old \n",
+      "Fuck you\n"
+     ]
+    }
+   ],
+   "source": [
+    "#inheritance- remove the need to copy paste \n",
+    "class Dog(object):\n",
+    "    def __init__(self,name,age): #self represents an instance \n",
+    "        self.name = name \n",
+    "        self.age= age\n",
+    "    \n",
+    "    def speak(self):\n",
+    "        print('Hi I am', self.name,'and I am',self.age,'years old ')\n",
+    "    \n",
+    "    def talk(self):\n",
+    "        print('bark')\n",
+    "    \n",
+    "class Cat(Dog): # Dog is the parent/Super class , cat is the child class \n",
+    "    def __init__(self,name,age,color) :\n",
+    "        super().__init__(name,age)\n",
+    "        self.color=color\n",
+    "    def talk(self):\n",
+    "        print('Meow')\n",
+    "    def speak(self):\n",
+    "        print('Fuck you')\n",
+    "    \n",
+    "Jim=Dog('morris',10,)\n",
+    "Jim.speak()\n",
+    "\n",
+    "\n",
+    "tim = Cat('tim',5,'blue')\n",
+    "tim.speak()\n",
+    "\n",
+    "   #when you inherit you inherit both the class and methods  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class vehicle():\n",
+    "    def __init__(self,price,gas,color):\n",
+    "        self.price=price\n",
+    "        self.gas=gas\n",
+    "        self.color=color\n",
+    "    def filluptank(self):\n",
+    "        self.gas=100\n",
+    "    def emptytank(self):\n",
+    "        self.gas=0\n",
+    "    def gasleft(self):\n",
+    "        return self.gas\n",
+    "\n",
+    "class Car(vehicle):\n",
+    "    def __init__(self,price,gas,color,speed):\n",
+    "        super().__init__(price,gas,color)\n",
+    "        self.speed=speed\n",
+    "    def beep(self):\n",
+    "        print('Beep Beep')\n",
+    "\n",
+    "class Truck(vehicle):\n",
+    "    def __init__(self,price,gas,color,tires):\n",
+    "        super().__init__(price,gas,color)\n",
+    "        self.tires=tires\n",
+    "    def beep(self):\n",
+    "        print('Honk Honk')\n",
+    "\n",
+    "Mercedes = vehicle(1000,1,'Blue')\n",
+    "Mercedes.emptytank()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operator overloading and methods of overloading"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -2344,72 +2482,219 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nice you made a dog\n",
-      "Nice you made a dog\n"
+      "(6, 6) (-3, -3) 9 (7, 9)\n"
      ]
     }
    ],
    "source": [
-    "# create your won classes and objects \n",
-    "class Dog(object):\n",
-    "    def __init__(self):\n",
-    "        print('Nice you made a dog')\n",
-    "        pass\n",
+    "class Point():\n",
+    "    def __init__(self, x=0, y=0):\n",
+    "        self.x=x\n",
+    "        self.y=y\n",
+    "        self.chords=(self.x,self.y)\n",
+    "    def move(self,x,y):\n",
+    "        self.x += x\n",
+    "        self.y += y\n",
+    "    def __add__(self,p):\n",
+    "        return Point(self.x + p.x, self.y + p.y)\n",
+    "    def __sub__(self,p):\n",
+    "        return Point(self.x - p.x, self.y - p.y)\n",
+    "    def __mult__(self,p):\n",
+    "        return self.x * p.x + self.y * p.y\n",
+    "    def __str__(self):\n",
+    "        return f\"({self.x}, {self.y})\"\n",
     "\n",
-    "    def speak(self):\n",
-    "        pass\n",
+    "p1 = Point(3,4)\n",
+    "p2 = Point(3,2)\n",
+    "p3 = Point(1,3)\n",
+    "p4 = Point(0,1)\n",
+    "p5 = p1 + p2\n",
+    "p6 = p4 - p1\n",
+    "p7 = p2.__mult__(p3)\n",
+    "p8 = p3 + p5\n",
     "\n",
-    "tim=Dog()\n",
-    "fred=Dog()\n"
+    "print(p5, p6, p7, p8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v1 moved:Vector(4,5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise \n",
+    "# Creating a vector class to represent a 2D vector \n",
+    "import math\n",
+    "class Vector():\n",
+    "    def __init__(self,x,y):\n",
+    "        self.x=x\n",
+    "        self.y=y\n",
+    "    def move(self,x,y):\n",
+    "        self.x += x\n",
+    "        self.y += y\n",
+    "    def __add__(self,m):\n",
+    "        return Vector(self.x + m.x, self.y + m.y)\n",
+    "    def __sub__(self,m):\n",
+    "        return Vector(self.x - m.x, self.y - m.y)\n",
+    "    def __mult__(self,m):\n",
+    "        return (self.x * m.x, self.y * m.y)\n",
+    "    def __eq__(self,m):\n",
+    "        return  (self.x == m.x and self.y == m.y)\n",
+    "    def magnitude(self):\n",
+    "        return math.sqrt (self.x**2 + self.y**2)\n",
+    "    def direction(self):\n",
+    "        return math.atan2 (self.x, self.y)\n",
+    "    def __str__(self):\n",
+    "        return f'Vector({self.x},{self.y})'\n",
+    "v1 = Vector(3,4)\n",
+    "v2 = Vector(1,2)\n",
+    "v3 = Vector(3,4)\n",
+    "\n",
+    "v1.move(1,1)\n",
+    "print(f\"v1 moved:{v1}\")\n",
+    "    \n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "results of the 2016 Referendum \n"
+     ]
+    }
+   ],
+   "source": [
+    "# formated spring literals \n",
+    "year =2016\n",
+    "event ='Referendum '\n",
+    "print(f'results of the {year} {event}')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 6) (-3, -3) 9 (7, 9)\n",
+      "comparison between p1&p2: False\n",
+      "comparison between p1&p2: True\n",
+      "comparison between p4&p3: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "class Point():\n",
+    "    def __init__(self, x=0, y=0):\n",
+    "        self.x=x\n",
+    "        self.y=y\n",
+    "        self.chords=(self.x,self.y)\n",
+    "    def move(self,x,y):\n",
+    "        self.x += x\n",
+    "        self.y += y\n",
+    "    def __add__(self,p):\n",
+    "        return Point(self.x + p.x, self.y + p.y)\n",
+    "    def __sub__(self,p):\n",
+    "        return Point(self.x - p.x, self.y - p.y)\n",
+    "    def __mult__(self,p):\n",
+    "        return self.x * p.x + self.y * p.y\n",
+    "    def length(self):\n",
+    "        return math.sqrt(self.x**2 + self.y**2)\n",
+    "    \n",
+    "    def __gt__(self,p):\n",
+    "        return self.length() > p.length() \n",
+    "    def __ge__(self,p):\n",
+    "        return self.length() >= p.length() \n",
+    "    def __lt__(self,p):\n",
+    "        return self.length() < p.length() \n",
+    "    def __le__(self,p):\n",
+    "        return self.length() <= p.length() \n",
+    "    def __eq__(self,p):\n",
+    "        return self.x == p.x and self.y==p.y \n",
+    "    def __str__(self):\n",
+    "        return f\"({self.x}, {self.y})\"\n",
+    "\n",
+    "p1 = Point(3,4)\n",
+    "p2 = Point(3,2)\n",
+    "p3 = Point(1,3)\n",
+    "p4 = Point(0,1)\n",
+    "p5 = p1 + p2\n",
+    "p6 = p4 - p1\n",
+    "p7 = p2.__mult__(p3)\n",
+    "p8 = p3 + p5\n",
+    "\n",
+    "print(p5, p6, p7, p8)\n",
+    "v=p1==p2\n",
+    "print(f'comparison between p1&p2: {v}')\n",
+    "b= p1>p2\n",
+    "print(f'comparison between p1&p2: {b}')\n",
+    "c= p4<=p3\n",
+    "print(f'comparison between p4&p3: {c}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class methods static methods & class variable "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1212270346.py, line 15)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 15\u001b[1;36m\u001b[0m\n\u001b[1;33m    for _in range(n):\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog:\n",
+    "    dogs = []\n",
+    "\n",
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "        self.dogs.append(self)\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def num_dogs(cls):\n",
+    "        return len(cls.dogs)\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def bark(n):\n",
+    "        \"\"\"barks n times\"\"\"\n",
+    "        for _in range(n):\n",
+    "            print('Bark!')\n",
+    "tim = Dog('Tim')\n",
+    "Jim = Dog('Jim')"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
