inheritance,Overloading,abstraction

--- a/practice_.ipynb
+++ b/practice_.ipynb
@@ -9,6 +9,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -2384,6 +2391,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inheritance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -2432,9 +2446,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beep Beep\n"
+     ]
+    }
+   ],
    "source": [
     "class vehicle():\n",
     "    def __init__(self,price,gas,color):\n",
@@ -2447,6 +2469,8 @@
     "        self.gas=0\n",
     "    def gasleft(self):\n",
     "        return self.gas\n",
+    "    def __str__(self):\n",
+    "        return(f'{self.price},{self.gas},{self.color}')\n",
     "\n",
     "class Car(vehicle):\n",
     "    def __init__(self,price,gas,color,speed):\n",
@@ -2462,9 +2486,143 @@
     "    def beep(self):\n",
     "        print('Honk Honk')\n",
     "\n",
-    "Mercedes = vehicle(1000,1,'Blue')\n",
-    "Mercedes.emptytank()\n"
+    "Mercedes = Car(1000,1,'Blue',60)\n",
+    "Mercedes.beep()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_name': 'morris', '_surname': 'sindet', '_yob': 1996}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class person:\n",
+    "    def __init__(self,name,surname,yob):\n",
+    "        self._name=name #self is a pointer keyword \n",
+    "        self._surname=surname\n",
+    "        self._yob=yob\n",
+    "    def test(self,n,m): #the first key should always be pointer which is used as a reference in a method\n",
+    "        return n+m+self._yob\n",
+    "    def __str__(self):\n",
+    "        return(f'My first name is {self.name},second name is {self.surname} and i was born {self.yob}')\n",
+    "        \n",
+    "\n",
+    "p=person('morris','sindet',1996)\n",
+    "\n",
+    "p._surname\n",
+    "p.__dict__\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'morris'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class student(person):\n",
+    "    def __init__(self,roll_number,college_name, *args):\n",
+    "        super(student,self).__init__(*args)\n",
+    "        self.roll_number=roll_number\n",
+    "        self.college_name=college_name\n",
+    "\n",
+    "stud=student(6788,'Hunk','morris','sindet',1996)\n",
+    "stud._name\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2005"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stud.test(4,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is morris\n",
+      "my name is John\n",
+      "my name is morris\n"
+     ]
+    }
+   ],
+   "source": [
+    "# multiple inheritance \n",
+    "class a :\n",
+    "    def test(self):\n",
+    "        print('my name is morris')\n",
+    "class b :\n",
+    "    def test(self):\n",
+    "        print('my name is John')\n",
+    "class  c(a,b):\n",
+    "    m=a()\n",
+    "    n=b()\n",
+    "    m.test()\n",
+    "    n.test()\n",
+    "objc=c()\n",
+    "objc.test()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2651,6 +2809,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2661,16 +2833,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1212270346.py, line 15)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 15\u001b[1;36m\u001b[0m\n\u001b[1;33m    for _in range(n):\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Dog:\n",
     "    dogs = []\n",
@@ -2686,15 +2849,317 @@
     "    @staticmethod\n",
     "    def bark(n):\n",
     "        \"\"\"barks n times\"\"\"\n",
-    "        for _in range(n):\n",
+    "        for _ in range(n):\n",
     "            print('Bark!')\n",
     "tim = Dog('Tim')\n",
     "Jim = Dog('Jim')"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jack'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class person:\n",
+    "    def __init__(self,name,surname,yob):  #init is used to initialize a variable \n",
+    "        self.name=name #self is a pointer \n",
+    "        self.surname=surname\n",
+    "        self.yob=yob\n",
+    "p=person('morris','sindet',1998)\n",
+    "s= person('jack','norris',1996)\n",
+    "p.name\n",
+    "p.yob\n",
+    "s.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My first name is morris,second name is sindet and i was born 1996\n"
+     ]
+    }
+   ],
+   "source": [
+    "class person:\n",
+    "    def __init__(self,name,surname,yob):\n",
+    "        self.name=name #self is a pointer keyword \n",
+    "        self.surname=surname\n",
+    "        self.yob=yob\n",
+    "    def test(self,n,m): #the first key should always be pointer which is used as a reference in a method\n",
+    "        return n+m+self.yob\n",
+    "    def __str__(self):\n",
+    "        return(f'My first name is {self.name},second name is {self.surname} and i was born {self.yob}')\n",
+    "        \n",
+    "\n",
+    "p=person('morris','sindet',1996)\n",
+    "print(p)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class test:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = test()\n",
+    "p.name = 'morris'\n",
+    "p.surname = 'sindet'\n",
+    "p.yob = 1996"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'morris'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.name "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'chris'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = test()\n",
+    "s.name = 'chris'\n",
+    "s.name\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class person:\n",
+    "    def pass_name(self,name):\n",
+    "        self.name=name\n",
+    "    def pass_surname(self,surname):\n",
+    "        self.surname=surname\n",
+    "    def pass_yob(self,yob):\n",
+    "        self.yob=yob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = person()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sindet'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.pass_name('sindet')\n",
+    "p.name"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "##  Abstraction Private,protected,public keys "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_name': 'morris', '_surname': 'sindet', '_yob': 1996}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# public anyone will have access to your methods/variables both outside and inside a class \n",
+    "# protected you will access to your methods/variables  inside a class but not outside a class\n",
+    "# _ means protected and without underscore means public \n",
+    "# double underscore means its private \n",
+    "class person:\n",
+    "    def __init__(self,name,surname,yob):\n",
+    "        self._name=name #self is a pointer keyword \n",
+    "        self._surname=surname\n",
+    "        self._yob=yob\n",
+    "    def test(self,n,m): #the first key should always be pointer which is used as a reference in a method\n",
+    "        return n+m+self.yob\n",
+    "    def __str__(self):\n",
+    "        return(f'My first name is {self.name},second name is {self.surname} and i was born {self.yob}')\n",
+    "        \n",
+    "\n",
+    "p=person('morris','sindet',1996)\n",
+    "p.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_name': 'Andrew', '_surname': 'John', '_yob': 1996}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = person('Andrew','John',1996)\n",
+    "s.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_person__name': 'morris', '_surname': 'sindet', '_yob': 1996}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class person:\n",
+    "    def __init__(self,name,surname,yob):\n",
+    "        self.__name=name #self is a pointer keyword \n",
+    "        self._surname=surname\n",
+    "        self._yob=yob\n",
+    "    def test(self,n,m): #the first key should always be pointer which is used as a reference in a method\n",
+    "        return n+m+self.yob\n",
+    "    def __str__(self):\n",
+    "        return(f'My first name is {self.name},second name is {self.surname} and i was born {self.yob}')\n",
+    "        \n",
+    "\n",
+    "p=person('morris','sindet',1996)\n",
+    "\n",
+    "p._surname\n",
+    "p.__dict__\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
