--- a/practice_.ipynb
+++ b/practice_.ipynb
@@ -2831,28 +2831,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bark!\n",
+      "Bark!\n",
+      "Bark!\n",
+      "Bark!\n",
+      "Bark!\n",
+      "Bark!\n"
+     ]
+    }
+   ],
    "source": [
     "class Dog:\n",
-    "    dogs = []\n",
+    "    dogs = [] #static class methods\n",
+    "    xc =  5\n",
     "\n",
     "    def __init__(self,name):\n",
     "        self.name=name\n",
     "        self.dogs.append(self)\n",
     "    \n",
-    "    @classmethod\n",
+    "    @classmethod #decorators indicate if there are going to be a special class  \n",
     "    def num_dogs(cls):\n",
     "        return len(cls.dogs)\n",
     "    \n",
-    "    @staticmethod\n",
+    "    @staticmethod #decorators \n",
     "    def bark(n):\n",
     "        \"\"\"barks n times\"\"\"\n",
     "        for _ in range(n):\n",
     "            print('Bark!')\n",
-    "tim = Dog('Tim')\n",
-    "Jim = Dog('Jim')"
+    "\n",
+    "Dog.bark(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.05\n",
+      "1.05\n",
+      "1.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    num_of_emps = 6\n",
+    "    raise_amt = 1.64\n",
+    "\n",
+    "    def __init__(self,first,last,pay):\n",
+    "        self.first=first\n",
+    "        self.last=last\n",
+    "        self.email = first + \"_\" + last + '@email.com'\n",
+    "        self.pay = pay\n",
+    "\n",
+    "        Employee.num_of_emps += 1\n",
+    "\n",
+    "    def fullname(self):\n",
+    "      return '{} {}'.format(self.first, self.last)\n",
+    "\n",
+    "    def apply_raise(self):\n",
+    "      self.pay = int(self.pay * self.raise_amnt)\n",
+    "     \n",
+    "    @classmethod\n",
+    "    def set_raise_amt(cls,amount):\n",
+    "      cls.raise_amt = amount\n",
+    "\n",
+    "\n",
+    "emp_1 = Employee('Morris', 'Sindet',5000)\n",
+    "emp_2 = Employee('Test', 'Employee', 6000)\n",
+    "\n",
+    "emp_1.set_raise_amt(1.05)\n",
+    "\n",
+    "print(Employee.raise_amt)\n",
+    "print(emp_1.raise_amt)\n",
+    "print(emp_2.raise_amt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class _Private:\n",
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "\n",
+    "class NotPrivate:\n",
+    "    def __init__(self,name) :\n",
+    "          self.name= name \n",
+    "          self.priv = _Private(name)\n",
+    "    \n",
+    "    def display(self):\n",
+    "         print('hello')\n",
+    "    \n",
+    "    def display(self):\n",
+    "         print('hi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating classes "
    ]
   },
   {
@@ -3121,46 +3234,260 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Optional Parameters "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "morris\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(word, add=5, freq=1):\n",
+    "    print(word*(freq+add))\n",
+    "\n",
+    "call = func('morris',0,1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This car is  a mercedes benz from 2012 it is New and has 0 kms \n"
+     ]
+    }
+   ],
+   "source": [
+    "class car(object):\n",
+    "    def __init__(self,make,model,year,condition='New',kms=0): # condition and New are optional parameters \n",
+    "        self.make=make\n",
+    "        self.model=model\n",
+    "        self.year=year\n",
+    "        self.condition=condition\n",
+    "        self.kms=kms\n",
+    "    def display(self,showall=True):\n",
+    "         if showall:\n",
+    "            print(f'This car is  a {self.make} {self.model} from {self.year} it is {self.condition} and has {self.kms} kms ')\n",
+    "         else:\n",
+    "            print(f'This car is a {self.make} is from {self.model} and is from the year {self.year}')\n",
+    "    \n",
+    "whip = car('mercedes','benz',2012)\n",
+    "whip.display()\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "110"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class person(object):\n",
+    "    population = 50\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "    @classmethod\n",
+    "    def getPopulation(cls,amount):\n",
+    "        return cls.population+amount\n",
+    "    @staticmethod\n",
+    "    def isAdult(age):\n",
+    "        return 5>=18\n",
+    "    \n",
+    "    def display(self):\n",
+    "        print(self.name, 'is',self.age, 'years old')\n",
+    "\n",
+    "newPerson = person('tim',18)\n",
+    "print(person.isAdult(21))\n",
+    "person.getPopulation(60)\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Map function"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 27, 256, 3125, 46656, 823543, 16777216, 387420489, 10000000000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#not using the map function\n",
+    "li = [1,2,3,4,5,6,7,8,9,10]\n",
+    "def func(x):\n",
+    "    return x**x\n",
+    "\n",
+    "newlist=[]\n",
+    "for x in li:\n",
+    "    newlist.append(func(x))\n",
+    "\n",
+    "print(newlist)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 27, 256, 3125, 46656, 823543, 16777216, 387420489, 10000000000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using the map function \n",
+    "li = [1,2,3,4,5,6,7,8,9,10]\n",
+    "def func(x):\n",
+    "    return x**x\n",
+    "print (list(map(func,li)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 256, 46656, 16777216, 10000000000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using list comprehension\n",
+    "li = [1,2,3,4,5,6,7,8,9,10]\n",
+    "def func(x):\n",
+    "    return x**x\n",
+    "\n",
+    "print([func(x)for x in li if x%2==0])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Filter function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add7(x):\n",
+    "    return x+7\n",
+    "\n",
+    "def isOdd(x):\n",
+    "    return x%2 != 0\n",
+    "a = [1,2,3,4,5,6,7,8,9,10]\n",
+    "b = list(filter(isOdd,a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 10, 12, 14, 16]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(add7,filter(isOdd,a)))"
+   ]
   },
   {
    "cell_type": "code",
